--- a/pedotpss_multimode.ipynb
+++ b/pedotpss_multimode.ipynb
@@ -1206,9 +1206,9 @@
         "### Prepare data for training the model\n",
         "\n",
         "Now we must designate which data will be used for inputs and which will\n",
-        "be used for targets of the model. Our input matrix **_input_mat_** holds\n",
+        "be used for targets of the model. Our input matrix **input_mat** holds\n",
         " all the data going into the model. Then we select a specific column of \n",
-        " **_input_mat_** to use as the model targets (**_tar_col_**)."
+        " **input_mat** to use as the model targets (**tar_col**)."
       ]
     },
     {
